// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button add classes 1`] = `
<button
  className="button button-primary size--medium"
>
  Test
</button>
`;

exports[`Button add classes 2`] = `
<button
  className="button button-round size--medium"
  round={true}
>
  Test
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  className="button size--medium"
>
  Test
</button>
`;
